fix : too low

--- a/src/index.scss
+++ b/src/index.scss
@@ -179,7 +179,7 @@ body {
   opacity: 1;
   margin: 0;
   width: 100%;
-  min-height: 50vh;
+  min-height: 62vh;
 
   &.hidden {
     opacity: 0;
